style.css
body {
	background-color: #333333;
}

.clock {
	position: absolute;
        top: 50%;
        left: 52%;
        margin-right: -55%; transform: translate(-50%, -50%);
	background: #333333;
	width: 600px;
	padding: 30px;
	text-align: center;
	border-radius: 10px;
}

.clock-time {
	font-family: 'Titillium Web', sans-serif;	
	font-size: 120px;
	color: #eeeeee;
}

.clock-ampm {
	font-size: 40px;
	font-family: 'Titillium Web', sans-serif;
	color: gray; 
}

